test subscribe newletter

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ justice.
 
     <section class="contact" id="contact">
       <div class="row">
-        <div class="col-md-7 col-md-offset-1">
+        <div class="col-md-4 col-md-offset-1">
           <h2 class="contact-title-section">STAY TUNED</h2>
           <a href="https://kleroterion.herokuapp.com/">
             <img class="slack-icon" width="100px" src="https://cdn.worldvectorlogo.com/logos/slack-1.svg" />
@@ -509,13 +509,22 @@ justice.
             <img class="slack-icon" width="115px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" />
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
+          <!-- Begin MailChimp Signup Form -->
+          <h2 class="contact-title-section">NEWSLETTER</h2>
+          <form action="//novoo.us8.list-manage.com/subscribe/post?u=4f7205a987141b9861d35b883&amp;id=ca0822918f" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	          <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Email" class="form-control form-input" required>
+            <input type="hidden" name="b_4f7205a987141b9861d35b883_ca0822918f">
+            <input type="submit" value="Subscribe" name="subscribe" class="submit pull-right">
+          </form>
+        </div>
+        <div class="col-md-offset-1 col-md-3">
           <h2 class="contact-title-section">CONTACT</h2>
           <form action="https://formspree.io/contact@kleroterion.io"
       method="POST">
             <input type="text" class="form-control form-input" name="name" placeholder="Name">
             <input type="text" class="form-control form-input" name="company" placeholder="Company">
-            <input type="text" class="form-control form-input" name="_replyto" placeholder="Email" />
+            <input type="text" class="form-control form-input" name="_replyto" placeholder="Email" required />
             <textarea class="form-control form-input" name="content" rows="3" placeholder="Text"></textarea>
             <input type="submit" class="submit pull-right" value="Submit">
           </form>
