--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ justice.
             <img src="img/logo_footer.png" style="display:inline;width:50px;"/>Kleroterion
           </div>
           <div class="pull-right">
-            Kleroterion © 2017  <a href="mailto:info@kleroterion.io" class="footer-mail-to">info@kleroterion.io</a>
+            <a href="https://angel.co/kleroterion/jobs/">Jobs</a> - Kleroterion © 2017  <a href="mailto:info@kleroterion.io" class="footer-mail-to">info@kleroterion.io</a>
           </div>
         </div>
       </div>
