--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-ex1-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -50,7 +50,8 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-      <div class="row introduction-row">
+
+      <div class="row introduction-row hidden-xs">
         <div class="col-md-5 col-md-offset-1">
           <img src="img/phone.png" class="phone" />
           <img src="img/pinakion.png" class="pinakion" />
@@ -69,10 +70,23 @@
           </div>
         </div>
       </div>
+
+      <div class="row introduction-row visible-xs">
+        <div class="col-md-12">
+          <p class="">
+            Based on Ethereum <img class="logo-ethereum" src="img/ethereum_logo.png" /> Blockchain
+            <br />A JUSTICE SYSTEM<br />FOR THE INTERNET AGE
+            <br />A decentralized autonomous organization that delivers
+            <br />
+            fast, affordable and transparent justice for all.
+          </p>
+        </div>
+      </div>
+
     </section>
 
     <section class="the-justice-protocol" id="protocol">
-      <div class="row">
+      <div class="row hidden-xs">
         <div class="col-md-5 col-md-offset-1">
           <h2 class="the-justice-protocol-title-section">THE JUSTICE<br /><span class="the-justice-protocol-subtitle">PROTOCOL</span></h2>
           <div class="row">
@@ -95,6 +109,29 @@
         </div>
         <div class="col-md-6">
           <img class="iMac" src="img/iMac.png" />
+        </div>
+      </div>
+
+      <div class="row visible-xs">
+        <div class="col-md-5 col-md-offset-1">
+          <h2 class="the-justice-protocol-title-section">THE JUSTICE PROTOCOL</h2>
+          <div class="row">
+            <div class="col-md-12">
+              <p class="the-justice-protocol-introduction">The blockchain ushers a world of contracts enforced by code.</p>
+              <p class="">
+                Smart contracts are smart enough to self-execute as programmed,
+                but not to evaluate complex information or to render subjective
+                judgments.
+              </p>
+              <p>
+                Human involvement is necessary when a dispute arises, when circumstances have drastically changed since the moment the contract was signed and when a high stakes decision must be made.
+              </p>
+              <p>
+                Kleroterion is a decision making protocol which uses the blockchain, crowdsourcing and game theory to settle disputes and to modify or revoke smart contracts in a fast, transparent and inexpensive way.
+              </p>
+              <a type="button" class="btn btn-default pull-right page-scroll" href="#how-it-works">How it works?</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
