update slack url

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ justice.
       <div class="row">
         <div class="col-md-4 col-md-offset-1">
           <h2 class="contact-title-section">STAY TUNED</h2>
-          <a href="https://kleroterion.herokuapp.com/">
+          <a href="https://kleros.herokuapp.com/">
             <img class="slack-icon" width="100px" src="https://cdn.worldvectorlogo.com/logos/slack-1.svg" />
           </a>
           <a href="https://twitter.com/federicoast">
